fixes z-index issues

--- a/app/assets/stylesheets/components/flexslider.scss
+++ b/app/assets/stylesheets/components/flexslider.scss
@@ -344,7 +344,7 @@ html[xmlns] .slides {
   position: absolute;
   bottom: -30px;
   text-align: center;
-  z-index: 9999;
+  z-index: 999;
   li {
     margin: 0 0 0 5px;
     display: inline-block;
