--- a/app/assets/stylesheets/components/social-follow-us.scss
+++ b/app/assets/stylesheets/components/social-follow-us.scss
@@ -2,7 +2,7 @@
   width: auto;
   height: 38px;
   position: relative;
-  z-index: 1000;
+  z-index: 999;
   float: right;
   margin-top: 0;
   padding-left: 8px;
