--- a/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
+++ b/app/assets/stylesheets/regions/mastheads/boxes-masthead.scss
@@ -2,7 +2,7 @@
   position: relative;
   top: 0;
   left: auto;
-  z-index: 1000;
+  z-index: 999;
   display: block;
 
   a {
